Most css is done and I will dtart working on the js now

--- a/index.html
+++ b/index.html
@@ -13,23 +13,18 @@
 <body>
     <div class="header container"><h1 class="header txt">Etch a Sketch</h1></div>
     <div class="container main">
-        <div class="icon-container">
-            <input type="color" id="black" class="color-picker" name="black" value="#5e5b5b">
-            <p class="icon">Color</p>
-            <img src="./imgs/draw.svg" alt="Draw button" class="icon">
-            <p class="icon">Draw</p>
-            <img src="./imgs/shade.svg" alt="Shade button" class="icon">
-            <p class="icon">Shade</p>
-            <img src="./imgs/eraser.svg" alt="Eraser button" class="icon">
-            <p class="icon">Eraser</p>
-            <img src="./imgs/clear.svg" alt="Clear button" class="icon">
-            <p class="icon">Clear</p>
-            <img src="./imgs/rainbow.svg" alt="random color button" class="icon">
-            <p class="icon">Random</p>
+        <div class="btns-container">
+            <div class="btns">
+                <input data-tooltip="Color picker" type="color" id="black" class="color-picker btn" name="black" value="#000001">
+                <button class="btn" data-tooltip="Draw"><img src="./imgs/draw.svg" alt="Draw button" class="btn-icon"></button>
+                <button class="btn" data-tooltip="Shade"><img src="./imgs/shade.svg" alt="Shade button" class="btn-icon"></button>
+                <button class="btn" data-tooltip="Erase"><img src="./imgs/eraser.svg" alt="Eraser button" class="btn-icon"></button>
+                <button class="btn" data-tooltip="Clear"><img src="./imgs/clear.svg" alt="Clear button" class="btn-icon"></button>
+                <button class="btn" data-tooltip="Randonm"><img src="./imgs/rainbow.svg" alt="Random color button" class="btn-icon"></button>
+            </div>
         </div>
         <div class="sketch-pad"></div>
-        <img src="./imgs/grid.svg" alt="Show grid button" class="icon">
-        <p class="icon">Show</p>
+        <div class="grid-container"><button class="btn grid" data-tooltip="Show grid"><img src="./imgs/grid.svg" alt="Show grid button" class="btn-icon"></button></div>
         <div>
             <input type="range" id="size" name="size"
                    min="1" max="100">
