--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,11 +25,11 @@
         </div>
         <div class="sketch-pad"></div>
         <div class="under-pad">
-            <div class="size-display"><span class="size-span">16x16</span></div>
+            <div class="size-display"><span class="size-span">8x8</span></div>
             <div class="grid-container"><button class="btn grid" data-tooltip="Show grid"><img src="./imgs/grid.svg" alt="Show grid button" class="btn-icon"></button></div>
         </div>
         <div class="input-range">
-            <input type="range" id="size" name="size" value="16"
+            <input type="range" id="size" name="size" value="8"
             min="1" max="64">
             <div class="label"><label for="size">Pad Size</label></div>
         </div>
