--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="input-range">
             <input type="range" id="size" name="size" value="8"
             min="1" max="64">
-            <div class="label"><label for="size">Pad Size</label></div>
+            <div class="label"><label for="size">Sketch Size</label></div>
         </div>
     </div>
     <div class="footer container"><h1 class="footer txt">copyrights © akiva 2022</h1></div>
